--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
                 }
             }
         ],
-        "babel/preset-react",
+        "babel/preset-react"
     ],
     "plugins": [
         "@babel/plugin-proposal-class-properties"
