--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": "> 1%, last 2 versions",
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-stage-2": "^7.8.3",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "postcss-loader": "^3.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "css-loader": "^3.5.3",
     "jshint": "^2.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
