--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@babel/preset-stage-2": "^7.8.3",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.2.0",
     "postcss-loader": "^3.0.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "css-loader": "^3.5.3",
     "jshint": "^2.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
