--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
         [
             "@babel/preset-env", {
                 "targets": {
-                    "browers": ["> 1%", "last 2 versions"]
+                    "browsers": ["> 1%", "last 2 versions"]
                 }
             }
         ],
